# simple_webhook_schedule

./: Cargo.toml  Dockerfile  schedule.toml
.github/workflows/: auto-approve.yml  build.yml  deployment.yml
schedules/: llr.toml  silkie.toml  smoooth.toml
src/: conv.rs  main.rs
