[package]
name = "simple_webhook_schedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
chrono-tz = "0.9.0"
log = "0.4.21"
env_logger = "0.11.3"
figment = { version = "0.10.19", features = ["toml"] }
serde_json = "1.0.128"
toml = "0.8.19"
dotenvy = "0.15.7"
serde_with = "3.9.0"
thiserror = "1.0.63"
openssl = { version = "0.10.66", features = ["vendored"] }
